--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -2,7 +2,6 @@
   <div class="upper-message">
     <div class="message-user">
       <%= message.user.name %>
-
     </div>
     <div class="message-date">
       <%= l message.created_at %>
@@ -11,7 +10,7 @@
   <div class="lower-message">
     <div class="message-content">
       <%= message.content %>
-
     </div>
+    <%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %>
   </div>
 </div>
